test/data/codegen/valid/entity_explicit_name/queries.cypher
// name: OneActor :one
MATCH (p:Person) RETURN p
