test/data/codegen/invalid/alias_required_function_call/queries.cypher
// name: CountPeople :one
MATCH (p:Person) RETURN count(*)
